<resources>
    <string name="app_name">RAWG - Youtube Monitor</string>
    <string name="game_thumbnail">Game thumbnail</string>
    <string name="game_add">Add game button</string>
    <string name="game_remove">Remove game button</string>

    <!-- Bottom navigation bar -->
    <string name="videos">Vidéos</string>
    <string name="favorites">Favoris</string>
    <string name="search">Recherche</string>

    <string name="search_hint">Chercher des jeux...</string>
    <string name="empty_list">La liste est vide</string>
    <string name="game_rating">Note : %1$s</string>
    <string name="view_count">%1$s vues</string>
    <string name="channel_name">de %1$s</string>
    <string name="video_name">Title</string>
</resources>